--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - composer install --no-interaction --prefer-source --dev
 
 before_script:
-  - php codecept build
+  - vendor/bin/codecept build
 
 script:
   - vendor/bin/codecept run --coverage --coverage-xml --coverage-html
