--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,15 @@
     "require": {
         "php": ">=7.1",
         "ext-json": "*",
+        "ext-intl": "*",
         "guzzlehttp/guzzle": "^6",
         "tolerance/tolerance": "^0.4.2"
     },
     "require-dev": {
-        "codeception/codeception": "^3",
-        "phpstan/phpstan": "^0.11.16"
+        "codeception/codeception": "^4",
+        "phpstan/phpstan": "^0.12",
+        "codeception/module-asserts": "^1.3",
+        "codeception/module-filesystem": "^1.0"
     },
     "authors": [
         {
@@ -21,8 +24,7 @@
         }
     ],
     "suggest": {
-        "ext-curl": "*",
-        "ext-intl": "*"
+        "ext-curl": "*"
     },
     "autoload": {
         "psr-4": {
